// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MapAppHeader snapshot tests should match the snapshot at device management step after getting the user points 1`] = `
<header
  className="map-app-header"
>
  <div
    className="map-app-header-block-container"
  >
    <div
      className="map-app-header-block"
    >
      <img
        alt="logo"
        className="map-app-header-brand-logo"
        src="test-file-stub"
      />
      <p
        className="map-app-header-brand-text"
      >
        map
      </p>
    </div>
    <div
      className="map-app-header-block terminal-search-header-block"
    >
      <img
        alt="terminal-search-image"
        src="test-file-stub"
      />
      <input
        className="terminal-search-input"
        data-testid="terminalSearch"
        placeholder="search"
        type="text"
      />
    </div>
  </div>
  <div
    className="map-app-header-block-container"
  >
    <div
      className="map-app-header-block user-points-header-block"
    >
      <img
        alt="user-points-image"
        src="test-file-stub"
      />
      <span
        className="user-points"
      >
        320
      </span>
      <span
        className="user-points"
      >
        points
      </span>
    </div>
    <div
      className="map-app-header-block"
    >
      <button
        className="map-app-header-user-button"
        data-testid="userButton"
        onClick={[Function]}
      >
        <img
          alt="login-header-account"
          className="map-app-header-account-image"
          src="test-file-stub"
        />
        <p
          className="map-app-header-account-text"
        />
      </button>
      <img
        alt="map-app-header-apps-google-play"
        src="test-file-stub"
      />
      <img
        alt="map-app-header-apps-app-store"
        src="test-file-stub"
      />
    </div>
  </div>
</header>
`;

exports[`MapAppHeader snapshot tests should match the snapshot at device management step with 0 points 1`] = `
<header
  className="map-app-header"
>
  <div
    className="map-app-header-block-container"
  >
    <div
      className="map-app-header-block"
    >
      <img
        alt="logo"
        className="map-app-header-brand-logo"
        src="test-file-stub"
      />
      <p
        className="map-app-header-brand-text"
      >
        map
      </p>
    </div>
    <div
      className="map-app-header-block terminal-search-header-block"
    >
      <img
        alt="terminal-search-image"
        src="test-file-stub"
      />
      <input
        className="terminal-search-input"
        data-testid="terminalSearch"
        placeholder="search"
        type="text"
      />
    </div>
  </div>
  <div
    className="map-app-header-block-container"
  >
    <div
      className="map-app-header-block user-points-header-block"
    >
      <img
        alt="user-points-image"
        src="test-file-stub"
      />
      <span
        className="user-points"
      >
        0
      </span>
      <span
        className="user-points"
      >
        point
      </span>
    </div>
    <div
      className="map-app-header-block"
    >
      <button
        className="map-app-header-user-button"
        data-testid="userButton"
        onClick={[Function]}
      >
        <img
          alt="login-header-account"
          className="map-app-header-account-image"
          src="test-file-stub"
        />
        <p
          className="map-app-header-account-text"
        />
      </button>
      <img
        alt="map-app-header-apps-google-play"
        src="test-file-stub"
      />
      <img
        alt="map-app-header-apps-app-store"
        src="test-file-stub"
      />
    </div>
  </div>
</header>
`;

exports[`MapAppHeader snapshot tests should match the snapshot at device management while waiting for user points 1`] = `
<header
  className="map-app-header"
>
  <div
    className="map-app-header-block-container"
  >
    <div
      className="map-app-header-block"
    >
      <img
        alt="logo"
        className="map-app-header-brand-logo"
        src="test-file-stub"
      />
      <p
        className="map-app-header-brand-text"
      >
        map
      </p>
    </div>
    <div
      className="map-app-header-block terminal-search-header-block"
    >
      <img
        alt="terminal-search-image"
        src="test-file-stub"
      />
      <input
        className="terminal-search-input"
        data-testid="terminalSearch"
        placeholder="search"
        type="text"
      />
    </div>
  </div>
  <div
    className="map-app-header-block-container"
  >
    <div
      className="map-app-header-block user-points-header-block"
    >
      <img
        alt="user-points-image"
        src="test-file-stub"
      />
      <div
        className="user-points-loader-container"
      >
        <div
          className="finik-loader"
        />
      </div>
    </div>
    <div
      className="map-app-header-block"
    >
      <button
        className="map-app-header-user-button"
        data-testid="userButton"
        onClick={[Function]}
      >
        <img
          alt="login-header-account"
          className="map-app-header-account-image"
          src="test-file-stub"
        />
        <p
          className="map-app-header-account-text"
        />
      </button>
      <img
        alt="map-app-header-apps-google-play"
        src="test-file-stub"
      />
      <img
        alt="map-app-header-apps-app-store"
        src="test-file-stub"
      />
    </div>
  </div>
</header>
`;

exports[`MapAppHeader snapshot tests should match the snapshot at the initial state 1`] = `
<header
  className="map-app-header"
>
  <div
    className="map-app-header-block-container"
  >
    <div
      className="map-app-header-block"
    >
      <img
        alt="logo"
        className="map-app-header-brand-logo"
        src="test-file-stub"
      />
      <p
        className="map-app-header-brand-text"
      >
        map
      </p>
    </div>
  </div>
  <div
    className="map-app-header-block-container"
  >
    <div
      className="map-app-header-block"
    >
      <button
        className="map-app-header-user-button"
        data-testid="userButton"
        onClick={[Function]}
      >
        <img
          alt="login-header-account"
          className="map-app-header-account-image"
          src="test-file-stub"
        />
        <p
          className="map-app-header-account-text"
        >
          loginAction
        </p>
      </button>
      <img
        alt="map-app-header-apps-google-play"
        src="test-file-stub"
      />
      <img
        alt="map-app-header-apps-app-store"
        src="test-file-stub"
      />
    </div>
  </div>
</header>
`;
